# deepCR

./: .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  CHANGES.txt  LICENSE.txt  MANIFEST.in  README.md  paper.bib  paper.md  setup.cfg  setup.py  training.py
deepCR/: __init__.py  dataset.py  evaluate.py  model.py  paper.bib  parts.py  parts_batchnorm.py  train.py  training.py  unet.py  unet_batchnorm.py  util.py
deepCR/test/: model_zoo.rst  test_dataset.py  test_evaluate.py  test_model.py  test_train.py  test_util.py
docs/: conf.py  deepCR.rst  deepCR.test.rst  environment.yml  index.rst  model_zoo.rst  modules.rst  requirements.txt  tutorial_train.rst  tutorial_use.rst
learned_models/: __init__.py
learned_models/inpaint/: ACS-WFC-3-32.pth  ACS-WFC-F606W-2-32.pth
learned_models/mask/: ACS-WFC-2-4.pth  ACS-WFC-F435W.pth  ACS-WFC-F606W-2-32.pth  ACS-WFC-F606W-2-4.pth  ACS-WFC-F814W.pth  ACS-WFC.pth  WFC3-UVIS.pth  decam.pth  example_model.pth
model/inpaint/: ACS-WFC-F606W-2-32.pth
