[aliases]
test=pytest
dists = sdist bdist_wheel

[bdist_wheel]
universal=0

[coverage:run]
source = deepCR
omit = deepCR/test/*
parallel = True
concurrency =
    thread

[metadata]
name = deepCR
license = BSD 3-Clause
license_files =
    LICENSE.txt
author = Keming Zhang
author_email = kemingz@berkeley.edu
url = http://pypi.python.org/pypi/deepCR/
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: POSIX
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Internet
    Topic :: Scientific/Engineering :: Astronomy


[options]
packages = find:
python_requires = >=3.5
install_requires =
    astropy>=3.1.2
    numpy>=1.16.3
    astroscrappy>=1.0.8
    tqdm
    scikit-image>=0.15.0
    scipy>=1.2.1
    torch>=1.1.0
    setuptools>=38.3
    cloudpickle>=0.8
    joblib>=0.13.2
tests_require =
    pytest

[test]
# py.test options when running `python setup.py test`
addopts = --verbose
extras = True

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
    --cov=deepCR --cov-config .coveragerc --cov-report term-missing
    --verbose --cov-report xml:coverage.xml
#    In order to use xdist, the developer can add, for example, the following
#    arguments:
#    --dist=load --numprocesses=auto
norecursedirs =
    dist
    build
    .tox
testpaths =
    deepCR/test

[flake8]
exclude =
    .tox
    build
    dist
    .eggs
